Cross browser bug squashing and old style syntax support.

--- a/browsersupports/2/compat2.css
+++ b/browsersupports/2/compat2.css
@@ -11,6 +11,7 @@ table layout
 .bs-table {
     width: 100%;
     background-color: #EAEFF2;
+    border-collapse: collapse;
 }
 
 .bs-table,
@@ -18,21 +19,35 @@ table layout
 .bs-table tbody,
 .bs-table tr,
 .bs-table th{
+
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+
     box-sizing: border-box;
 }
 
 .bs-table,
 .bs-table thead,
 .bs-table tbody {
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
     -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
 
 .bs-table tr {
+    -webkit-box-align: stretch;
+    -moz-box-align: stretch;
     -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
     align-items: stretch;
+
     border-bottom: 0px solid transparent;
     transition: border-bottom 0.2s ease-out;
 }
@@ -40,12 +55,19 @@ table layout
 .bs-table th,
 .bs-table td {
     position: relative;
-    -webkit-flex-grow: 1;
-    flex-grow: 1;
+
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 1 0;
+    -ms-flex: 1 1 0;
+    flex: 1 1 0;
+
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
     -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-flex-basis: 0;
-    flex-basis: 0;
+
     padding: 5px 3px;
     border-top: 1px solid #fff;
     border-left: 1px solid #fff;
@@ -79,11 +101,16 @@ table layout
 
 .bs-table thead > tr > th:first-child,
 .bs-table tbody th {
+
+    -webkit-box-pack: flex-start;
+    -moz-box-pack: flex-start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: flex-start;
+    justify-content: flex-start;
+
     min-width: 200px;
     width: 200px;
     max-width: 200px;
-    -webkit-justify-content: flex-start;
-    justify-content: flex-start;
     border-left: 0;
     text-align: left;
 }
@@ -109,9 +136,8 @@ table layout
 
     .bs-table tr {
         -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-        -webkit-flex-direction: column;
-        flex-direction: column;
     }
 
     .bs-table thead > tr > th:first-child{
@@ -122,6 +148,13 @@ table layout
     }
 
     .bs-table tbody th {
+
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-flex: 1 1 100%;
+        -ms-flex: 1 1 100%;
+        flex: 1 1 100%;
+
         min-width: 100%;
         width: 100%;
         max-width: 100%;
@@ -141,6 +174,30 @@ table layout
     .bs-table thead {
         display: none;
     }
+
+    .bs-table tr {
+        -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+
+        -webkit-box-direction: normal;
+        -moz-box-direction: normal;
+        -webkit-box-orient: vertical;
+        -moz-box-orient: vertical;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .bs-table tbody th,
+    .bs-table tbody td {
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+    }
+
     .bs-table tbody td {
         position: relative;
         min-width: 100%;
